@@ -699,12 +699,13 @@ sub _subscribeAction
     # Simulate changeRow but showing modal box on success
     my $jsStr = <<JS;
       var url =  '/RemoteServices/Controller/Subscription';
+      var params =  Zentyal.TableHelper.encodeFields('$tableName', $fieldsArrayJS);
       Zentyal.TableHelper.cleanMessage('$tableName');
-      Zentyal.TableHelper.setLoading('customActions_${tableName}_submit_form', '$tableName', true);
+      Zentyal.TableHelper.setLoading('${tableName}_ajaxform', '$tableName', true);
        \$.ajax({
                       url: url,
                       type: 'get',
-                      data: 'action=edit&tablename=$tableName&directory=$tableName&id=form&' +  Zentyal.TableHelper.encodeFields('$tableName', $fieldsArrayJS ),
+                      data: 'action=edit&tablename=$tableName&directory=$tableName&id=form&' +  params,
                       dataType: 'json',
                       success: function(response) {
                            if (!response.success) {
@@ -715,7 +716,7 @@ sub _subscribeAction
 
                            Zentyal.TableHelper.changeView(url, '$tableName', '$tableName', 'changeList');
                            Zentyal.TableHelper.setMessage('$tableName', response.msg);
-                           if ( document.getElementById('${tableName}_password') == null || $subscribed ) {
+                           if ( document.getElementById('${tableName}_password_row') == null || $subscribed ) {
                                Zentyal.Dialog.showURL('/RemoteServices/Subscription', {
                                                        title: '$caption',
                                                        showCloseButton: false,
@@ -727,7 +728,7 @@ sub _subscribeAction
                       },
                       error : function(t) {
                             Zentyal.TableHelper.setError('$tableName', t.responseText);
-                            Zentyal.TableHelper.restoreHidden('customActions_${tableName}_submit_form', '$tableName');
+                            Zentyal.TableHelper.restoreHidden('${tableName}_ajaxform', '$tableName');
                             Zentyal.refreshSaveChangesButton();
                       }
                   });
