@@ -1,4 +1,5 @@
 HEAD
+	+ Fixed JS regressions on subscribe action
 	+ Disable QA updates until next commercial edition
 	+ DisasterRecoveryDomains can notify other models
 	+ Fix remove conf backup after PSGI migration
